# OpenDataJounalism

./: .gitignore  CLAUDE.md  README.md  catalog_downloader.py  compose.yml  config.yaml  demo_mcp.py  lessons.md  main.py  orchestrator.py  pipeline.py  pipeline_template.py  population_analysis_report.py  pyproject.toml  runner.py  test_real_ollama_integration.py  日本のオープンデータ活用ライブラリ詳細.ini
.claude/: settings.local.json
data/: estat_cache.db
docker/: Dockerfile
docs/: gemini.md  lessons.md  program.md
estat_catalog/: catalog_summary_20250615_123519.json
infra/: estat_api.py  llm.py  storage.py
pipeline_archive/: pipeline_best.py  pipeline_template.py
scripts/: advanced_household_analysis.py  age_income_employment_analysis.py  catalog_downloader.py  demo_mcp.py  meaningful_household_analysis.py  population_analysis_report.py  real_data_analysis.py  regional_prediction_analysis.py
src/opendatajounalism/: __init__.py
src/opendatajounalism/mcp/: __init__.py  catalog_integration.py  estat_metadata_loader.py  estat_query_translator.py  ollama_integration.py
stages/: s01_fetch.py  s02_read.py  s03_plan.py  s04_analyze.py  s05_evaluate.py  s05b_interpret.py  s06_draft.py  s07_verify.py  s08_report.py
tasks/: lessons.md  todo.md
tests/: test_basic.py  test_real_ollama_integration.py
tests/integration/: test_population_analysis.py
tests/mcp/: test_estat_query_translator.py
