[project]
name = "opendatajounalism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "folium>=0.19.6",
    "geopandas>=1.0.1",
    "jageocoder>=2.1.8",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.3",
    "numpy<2.0.0",
    "pandas>=1.5.3",
    "pandas-estat>=0.3.4",
    "plotly>=6.1.0",
    "pyproj>=3.7.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
]
